# chx

./: .gitignore  README.md  公司GitHub上传整理方案.md
docs/: DPVO_原理详解文档.docx  DPVO视觉定位项目深度说明.md  src代码结构与数据流说明.md  系统运行总说明.md  纯视觉SLAM商场导航项目完整知识库.md  输出结果保留清单.md
go2_control/: README.md
go2_control/docs/: Go2 ROS2 SDK从0到SLAM导航学习路线.md  Go2_MuJoCo_RL底层控制交付工作流说明.md  Go2_RL底层强化学习控制方案评估与执行计划.md  Go2_SLAM导航到运动控制完整仿真闭环.md  Go2从0开始教程.md  Go2底层运动控制与完整流程开源代码路线.md  Go2高层控制与SLAM视觉导航路线.md  IsaacSimLab_Go2复现指南.md  Isaac云服务器迁移指南.md  仿真运动控制与具身导航最快入门路线.md  命令速查.md  官方仓库中文导读.md  第 1 步：用 MuJoCo 学运动控制.md
go2_control/notes/: current_status.md  go2_quickstart.md
go2_control/projects/base/go2_teleop_ctrl_keyboard/: package.xml  setup.py
go2_control/projects/go2_control_demos/: README.md  export_go2_policy.py  go2_mujoco_rl_policy_runner.py  go2_physics_stand.py  go2_rl_runner.py  go2_walk_runner.py  mujoco_go2_control_demos.py
go2_control/projects/go2_control_demos/policies/: README.md  dummy.pt  go2_flat_199.pt  go2_flat_2000.pt
go2_control/projects/go2_control_demos/tools/: cmd_vel_bridge.py  create_dummy_policy.py  test_cmd_vel_pub.py
go2_control/projects/go2_nav_sim/: cmd_vel_smoke_test.py  go2_mujoco_ros2_bridge.py  nav2_send_goal.py  slam_mapping_drive.py
go2_control/projects/go2_nav_sim/config/: go2_nav2_2d_view.rviz  nav2_go2_params.yaml  slam_toolbox_go2_mapper.yaml
go2_control/projects/go2_nav_sim/maps/: go2_office_maze.pgm  go2_office_maze.yaml
go2_control/scripts/: build_all_possible.sh  build_mujoco_cpp.sh  build_sdk2.sh  build_unitree_ros2.sh  check_go2_ros_graph.sh  check_network.sh  go2_rl_policy_check.sh  go2_ros2_sdk_check.sh  go2_ros_env.sh  install_mujoco.sh  install_system_deps.sh  isaaclab_check.sh  isaaclab_go2_play.sh  isaaclab_go2_record.sh  isaaclab_go2_train_small.sh  isaaclab_go2_viser.py  isaaclab_install.sh  isaaclab_precache.sh  run_go2_cmd_vel_smoke_test.sh  run_go2_nav2.sh  run_go2_nav2_goal.sh  run_go2_nav2_slam_map.sh  run_go2_nav_bridge.sh  run_go2_nav_bridge_headless.sh  run_go2_nav_rviz.sh  run_go2_slam_mapping_drive.sh  run_go2_slam_toolbox.sh  run_isaaclab_go2_viser.sh  run_mujoco_cpp.sh  run_mujoco_python.sh  run_mujoco_python_test.sh  save_go2_slam_map.sh  setup_python_env.sh  unitree_env.sh
isaac_go2_sim/: README.md
mall_visual_slam/config/: KannalaBrandt8.yaml  KannalaBrandt8_1280x720.yaml  KannalaBrandt8_960x540.yaml  slam_debug.rviz
mall_visual_slam/launch/: dpvo_offline.launch.py  orbslam3_only.launch.py  orbslam3_video.launch.py  video_only.launch.py
mall_visual_slam/scripts/: _check_env.py  aggregate_vggt_aligned.py  build_colmap_from_aligned.py  build_ros2_clean.sh  calibrate_camera.py  create_resume_docx.py  create_resume_preserve_docx.py  create_slam_interview_docx.py  create_vggt_docx.py  open_vggt_gsplat_viewer.sh  open_vggt_local.py  open_vggt_official_style.py  open_vggt_viser.py  render_aligned_scene.py  render_dpvo_3d_visualization.py  render_gaussian_ply_as_points.py  render_gsplat_paper_figure.py  render_paper_figure.py  run_ros2_clean.sh  run_vggt_gsplat_background.sh  run_vggt_gsplat_train.py  run_vggt_official_colmap.py  run_vggt_scene.py  run_vggt_video.py  update_dpvo_orbslam3_docx.py
mall_visual_slam/src/KV-tracker/: IMPLEMENTATION.md  README.md
mall_visual_slam/src/dpvo_localization/: package.xml  setup.cfg  setup.py
mall_visual_slam/src/dpvo_localization/dpvo_localization/: check_dpvo_env.py  dpvo_enhancement.py  prepare_dpvo_calib.py  run_dpvo_video.py
mall_visual_slam/src/orbslam3_wrapper/: CMakeLists.txt  package.xml
mall_visual_slam/src/orbslam3_wrapper/src/: mono_node.cpp
mall_visual_slam/src/people_bev_tracker/: IMPLEMENTATION.md  README.md  requirements.txt
mall_visual_slam/src/video_publisher/: package.xml  setup.py
(+68 files in other folders)
